Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17718

QSslKey is not taking DER encoded PKCS #8 private keys

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.0 Alpha
    • 4.7.1
    • Network: SSL
    • None
    • Symbian SR 1.11
    • f8e551cf088bff08de95132ed40d5850f8547fef

    Description

      QSslKey is failing when you pass a DER encoded PKCS#8 private key.

      The key that can be used for testing purpose is attached, you can just import this key from the file and pass it to QSslKey constructor.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            manordheim MÃ¥rten Nordheim
            ravikurupati Ravi Kurupati
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes